--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 
 #map-container {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     display: flex;
     justify-content: center;
@@ -17,5 +17,7 @@ body {
 #map {
     width: 100%;
     height: 100%;
+    cursor: grab;
+    user-select: none;
     transition: transform 0.5s ease;
 }
