--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,9 @@ body {
 
 #map-container {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #map {
