--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,5 @@ body {
 #map {
     width: 100%;
     height: 100%;
-    cursor: grab;
-    user-select: none;
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease; /* Dodano efekt przejścia dla płynniejszej animacji */
 }
