--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
   color: #111111;
   font-family: "Montserrat", "Montserrat Alternates", sans-serif;
 }
+header#pageheader nav>a{
+display: contents;
+text-decoration: none;
+color: #ecf0f1;
+}
 #pageheader ul {
   list-style: none;
   padding: 0;
@@ -53,8 +58,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
+} 
 #pageheader #search-input {
   padding: 8px 16px;
   border-radius: 20px;
@@ -253,6 +257,9 @@ article h1 {
   border-bottom: 1px solid #a2a9b1;
   font-weight: 600;
   font-size: 1.75rem;
+  float: left;
+  clear: left;
+  width: 100%;
 }
 article h2 {
   margin: 0.25em 0 0.25em 0;
@@ -404,12 +411,6 @@ article header span {
 article ul {
   display: block;
 }
-article img.icon.small {
-  display: inline;
-  height: 0.75rem;
-  padding: 0 0.25rem;
-  vertical-align: middle;
-}
 article img.icon {
   display: inline;
   height: 0.75rem;
@@ -487,4 +488,365 @@ main nav h1 {
   font-weight: 600;
   font-size: 1.75rem;
   width: 100%;
+}
+main.radio{
+overflow: hidden;
+position: relative;
+color:white;
+}
+main #radio-nav{
+background-color: #263949;
+float:left;
+width: 100%;
+height: calc(35vh - 80px);
+}
+main #radio-list{
+float: left;
+width: 100%;
+height: calc(65vh);
+background-color: #44627a;
+overflow-y: scroll;
+}
+main #radio-nav ul button{
+  display: contents;
+  font-family: "montserrat";
+  font-weight: 600;
+  color: white;
+  font-size: 1rem;
+  }
+
+@media screen and (min-width: 600px) {
+  main #radio-list ul li{
+  width: calc(12.5% - 0.4rem);
+  }
+  main #radio-nav{
+    width: 250px;
+    height: calc(100vh - 80px);
+}
+main #radio-nav h3{
+text-align: center;
+}
+main #radio-list{
+width: calc(100% - 250px);
+height: calc(100vh - 80px);
+padding: 0.2rem;
+box-sizing: border-box;
+}
+}
+main #radio-nav div{
+width: 100%;
+padding: 1rem 0;
+font-weight: 600;
+font-size: 1.25rem;
+text-align: center;
+}
+main #radio-nav ul{
+margin: 0;
+padding: 0.5rem;
+box-sizing: border-box;
+list-style-type: none;
+}
+main #radio-nav ul li:hover{
+background-color: #5c82a1;
+}
+main #radio-nav ul li{
+width: 100%;
+height: 40px;
+display: flex;
+justify-content: left;
+align-items: center;
+box-sizing: border-box;
+padding: 0 1rem;
+margin-bottom: 8px;
+font-weight: 600;
+cursor: pointer;
+border-radius: 5px;
+box-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px 1px;
+background-color: #44627a;
+transition: all 0.15s ease-in-out;
+}
+@media screen and (max-width: 599px){
+  main #radio-nav div{
+padding: 0;
+font-size: 0.75rem;
+}
+main #radio-nav{
+overflow-y: scroll;
+}
+main #radio-nav ul{
+display: flex;
+flex-direction: row;
+justify-content: center;
+flex-wrap: wrap;
+}
+main #radio-nav ul li{
+width: calc(50% - 18px);
+margin: 6px 3px;
+justify-content: center;
+font-size: 0.6rem;
+}
+}
+main #radio-list ul{
+padding: 0;
+margin: 0;
+list-style-type: none;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+}
+main #radio-list section{
+box-sizing: border-box;
+padding: 0.5rem;
+}
+main #radio-list ul li:hover{
+background-color: #32485c;
+}
+main #radio-list ul li{
+display: flex;
+flex-direction: column;
+background-color: #263949;
+padding: 0.4rem;
+box-sizing: border-box;
+border-radius: 0.4rem;
+margin: 0.2rem;
+cursor: pointer;
+transition: all 0.15s ease-in-out;
+}
+main #radio-list ul li span{
+width: 100%;
+text-align: left;
+font-weight: 600;
+padding: 0.4rem 0.4rem 0 0.4rem;
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+box-sizing: border-box;
+}
+main #radio-list ul a{
+display: contents;
+color: unset;
+}
+main #radio-list ul li img{
+width: 100%;
+border-radius: 0.4rem;
+}
+#radio-list-heading{
+text-align: center;
+}
+#radio-player{
+width: 100%;
+max-width: 800px;
+height: 300px;
+border-radius: 0.5rem;
+color: white;
+box-shadow: black 0 0 8px 0px;
+box-sizing: border-box;
+padding: 1rem;
+}
+#radio-player #radio-data{
+width: calc(100% - 268px);
+height: 100%;
+box-sizing: border-box;
+padding: 0.5rem 0 0.5rem 2rem;
+float: left;
+}
+#radio-logo{
+height: 100%;
+border-radius: 0.5rem;
+float: left;
+}
+main.radio-player-container{
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+main.radio-player-container a{
+color: white;
+font-size: 2rem;
+text-decoration: none;
+font-weight: 700;
+margin-top: 2rem;
+}
+#radio-player #radio-data h1{
+margin-top: 0;
+margin-bottom: 0.5rem;
+}
+#radio-player #radio-data ul{
+margin: 0;
+padding: 0;
+display: flex;
+flex-direction: row;
+list-style-type: none;
+margin-bottom: 0.4rem;
+}
+#radio-player #radio-data #radio-data-text{
+height: 160px;
+border-bottom: 1px solid #597994;
+margin-bottom: 10px;
+}
+#radio-player #radio-data #radio-data-text span{
+background-image: linear-gradient(to top, transparent 0%, white 90%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+display: block
+}
+#radio-player #radio-data hr{
+border-color: rgba(255,255,255, 0.3);
+}
+#radio-player #radio-data ul li{
+background-color: #263949;
+border-radius: 1rem;
+font-weight: 500;
+box-shadow: black 1px 1px 2px 0;
+padding: 0.25rem 1rem;
+margin-right: 0.5rem;
+}
+#radio-player #radio-data #toggle-button{
+display: contents;
+}
+#radio-player #radio-data #toggle-button .fa-solid{
+font-size: 5rem;
+color: white;
+cursor: pointer
+}
+#radio-player #radio-data #toggle-button.pause .fa-circle-play{
+display: none;
+}
+#radio-player #radio-data #toggle-button.play .fa-circle-pause{
+display: none;
+}
+/* level settings 👇 */
+
+.slider {
+  /* slider */
+  --slider-width: 100%;
+  --slider-height: 12px;
+  --slider-bg: #1a2833;
+  --slider-border-radius: 999px;
+  /* level */
+  --level-color: white;
+  --level-transition-duration: .1s;
+  /* icon */
+  --icon-margin: 15px;
+  --icon-color: var(--slider-bg);
+  --icon-size: 50px;
+  margin-left: 2rem;
+}
+
+.slider {
+  cursor: pointer;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.slider .volume {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: var(--icon-margin);
+  color: var(--icon-color);
+  width: var(--icon-size);
+  height: auto;
+}
+
+.slider .level {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: var(--slider-width);
+  height: var(--slider-height);
+  background: var(--slider-bg);
+  overflow: hidden;
+  border-radius: var(--slider-border-radius);
+  -webkit-transition: height var(--level-transition-duration);
+  -o-transition: height var(--level-transition-duration);
+  transition: height var(--level-transition-duration);
+  cursor: inherit;
+}
+
+.slider .level::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 0;
+  height: 0;
+  -webkit-box-shadow: -200px 0 0 200px var(--level-color);
+  box-shadow: -200px 0 0 200px var(--level-color);
+}
+
+.slider:hover .level {
+  height: calc(var(--slider-height) * 2);
+}
+
+#radio-player-settings{
+display: flex;
+width: 100%;
+height: 60px;
+align-items: center;
+padding-top: 15px;
+}
+.button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #0f171f;
+  border: none;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 0px 4px rgba(12, 17, 27, 0.486);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+}
+
+.svgIcon {
+  width: 12px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.button:hover {
+  width: 140px;
+  border-radius: 50px;
+  transition-duration: 0.3s;
+  background-color: rgb(36, 55, 71);
+  align-items: center;
+}
+
+.button:hover .svgIcon {
+  /* width: 20px; */
+  transition-duration: 0.3s;
+  transform: translateY(-200%);
+}
+
+.button::before {
+  position: absolute;
+  bottom: -20px;
+  content: "Powrót";
+  font-family: 'montserrat';
+  color: white;
+  /* transition-duration: .3s; */
+  font-size: 0px;
+}
+
+.button:hover::before {
+  font-size: 15px;
+  opacity: 1;
+  bottom: unset;
+  /* transform: translateY(-30px); */
+  transition-duration: 0.3s;
 }
