--- a/style.css
+++ b/style.css
@@ -486,6 +486,7 @@ main nav h1 {
   padding-bottom: 0.17em;
   border-bottom: 1px solid #a2a9b1;
   font-weight: 600;
+  color: #111111;
   font-size: 1.75rem;
   width: 100%;
 }
