--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ header#pageheader img {
   margin-right: 10px;
 }
 main {
-  background-color: #2e485d;
+  background-color: #101920;
   width: 100%;
   margin-top: 80px;
   min-height: calc(100vh - 80px);
