--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #101920;
   margin: 0;
   color: white;
   font-family: "Montserrat", "Montserrat Alternates", sans-serif;
