--- a/style.css
+++ b/style.css
@@ -708,7 +708,7 @@ margin-bottom: 0.4rem;
   position: relative
 }
 #radio-player #radio-data #radio-data-text #radio-name-container::after{
- background-image: linear-gradient(to right, transparent 0%, #2e485d 100%);
+ background-image: linear-gradient(to right, transparent 0%, #101920 100%);
 z-index: 100;
 height: 100%;
 content: "";
@@ -719,7 +719,7 @@ top: 0;
 display: block 
 }
 #radio-player #radio-data #radio-data-text #radio-name-container::before{
-background-image: linear-gradient(to right, #2e485d 0%, transparent 100%);
+background-image: linear-gradient(to right, #101920 0%, transparent 100%);
 z-index: 100;
 height: 100%;
 content: "";
@@ -747,7 +747,7 @@ max-height: 50%;
 border-color: rgba(255,255,255, 0.3);
 }
 #radio-player #radio-data ul li{
-background-color: #263949;
+background-color: #202f3c;
 border-radius: 1rem;
 font-weight: 500;
 box-shadow: black 1px 1px 2px 0;
@@ -774,7 +774,7 @@ display: none;
   /* slider */
   --slider-width: 100%;
   --slider-height: 12px;
-  --slider-bg: #1a2833;
+  --slider-bg: #334553;
   --slider-border-radius: 999px;
   /* level */
   --level-color: white;
