--- a/style.css
+++ b/style.css
@@ -847,7 +847,7 @@ padding-top: 15px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #0f171f;
+  background-color: #243442;
   border: none;
   font-weight: 600;
   display: flex;
@@ -873,7 +873,7 @@ padding-top: 15px;
   width: 140px;
   border-radius: 50px;
   transition-duration: 0.3s;
-  background-color: rgb(36, 55, 71);
+  background-color: #1f2a37;
   align-items: center;
 }
 
