--- a/style.css
+++ b/style.css
@@ -873,7 +873,7 @@ padding-top: 15px;
   width: 140px;
   border-radius: 50px;
   transition-duration: 0.3s;
-  background-color: #1f2a37;
+  background-color: #334553;
   align-items: center;
 }
 
