--- a/style.css
+++ b/style.css
@@ -853,7 +853,7 @@ padding-top: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 0px 4px rgba(12, 17, 27, 0.486);
+  box-shadow: 0px 0px 0px 4px rgba(7 9 14 / 49%);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
