--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-  background-color: #101920;
   margin: 0;
   color: white;
+  background-color: #101920;
   font-family: "Montserrat", "Montserrat Alternates", sans-serif;
 }
 header#pageheader nav>a{
@@ -747,7 +747,7 @@ max-height: 50%;
 border-color: rgba(255,255,255, 0.3);
 }
 #radio-player #radio-data ul li{
-background-color: #202f3c;
+background-color: #263949;
 border-radius: 1rem;
 font-weight: 500;
 box-shadow: black 1px 1px 2px 0;
@@ -774,7 +774,7 @@ display: none;
   /* slider */
   --slider-width: 100%;
   --slider-height: 12px;
-  --slider-bg: #334553;
+  --slider-bg: #1a2833;
   --slider-border-radius: 999px;
   /* level */
   --level-color: white;
@@ -847,13 +847,13 @@ padding-top: 15px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #243442;
+  background-color: #0f171f;
   border: none;
   font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 0px 0px 4px rgba(7 9 14 / 49%);
+  box-shadow: 0px 0px 0px 4px rgba(12, 17, 27, 0.486);
   cursor: pointer;
   transition-duration: 0.3s;
   overflow: hidden;
@@ -873,7 +873,7 @@ padding-top: 15px;
   width: 140px;
   border-radius: 50px;
   transition-duration: 0.3s;
-  background-color: #334553;
+  background-color: rgb(36, 55, 71);
   align-items: center;
 }
 
@@ -1458,7 +1458,68 @@ margin-bottom: 0.25rem;
   }
 }
 .article-tile-row a{
-  display: contents;
-  text-decoration: none;
-  color: white;
+display: contents;
+text-decoration: none;
+color: white;
 }
+.article-categories{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: center;
+max-width:  calc(1200px * 2rem);
+box-sizing: border-box;
+justify-content: start;
+padding: 0 2rem;
+}
+.article-category{
+  flex: 1;
+  min-width: 300px;
+padding-left: 0;
+list-style-position: inside;
+margin-right: 2rem;
+transition: all 0.25s ease-in-out;
+overflow: hidden;
+height: fit-content;
+position: relative;
+}
+.article-category h1{
+margin-top: 0;
+}
+@media screen and (max-width: 375px){
+  .article-category{
+    min-width: calc(100% - 2rem);
+    margin-right:2rem;
+    
+  }
+}
+@media screen and (max-width: 730px){
+  .article-categories{
+  padding-right: 0;
+  }
+}
+.article-category li a{
+display: contents;
+color: white;
+}
+.article-category li{
+white-space: nowrap;
+overflow: hidden;
+text-overflow: ellipsis;
+transition: all 0.15s ease-in-out;
+cursor: pointer;
+margin-bottom: 0.25rem;
+padding-right: 1rem;
+padding-bottom: 0.25rem;
+padding-top: 0.1rem;
+line-height: 1.5;
+}
+.article-category li:hover{
+padding-left: 1rem;
+}
+.article-category li:not(:last-of-type){
+border-bottom: rgba(255,255,255, 0.2) 1px solid;
+}
+.article-category li:not(:last-of-type):hover{
+  border-bottom: rgba(255,255,255, 0.75) 1px solid;
+  }
