--- a/style.css
+++ b/style.css
@@ -598,7 +598,7 @@ text-align: center;
 }
 main #radio-nav ul{
 margin: 0;
-padding: 0.5rem 0;
+padding: 0.5rem;
 box-sizing: border-box;
 list-style-type: none;
 }
@@ -614,10 +614,11 @@ cursor: pointer;
 align-items: center;
 box-sizing: border-box;
 padding: 0 1rem;
-margin-bottom: 4px;
+border-radius: 0.25rem;
+margin-bottom: 0.5rem;
 font-weight: 500;
 cursor: pointer;
-box-shadow: rgba(0, 0, 0, 0.5) 0 1px 1px 1px;
+box-shadow: #596e81 0px 1px 2px 0px;
 background-color: #1d2933;
 transition: all 0.15s ease-in-out;
 }
@@ -1603,11 +1604,11 @@ border-bottom: rgba(255,255,255, 0.2) 1px solid;
     z-index: 10;
   }
   main #radio-list ul li span{
-  font-weight: 500;
+  font-weight: 600;
   color: rgba(255,255,255, 0.9);
   }
   main #radio-list ul li:hover{
     background-color: #18222b;
-    transform: scale(1.15);
+    transform: translateY(-0.3rem);
     z-index: 100;
   }
